<resources>
    <string name="app_name">SariSariInventoryApp</string>

    <string name="product_image">Image of %s</string>
    <string name="product_number">Product Number</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_stock">In Stock</string>
    <string name="amount">Quantity</string>

    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_manually">or search manually</string>

    <string name="add_to_stock">Add To Stock</string>
    <string name="add_to_receipt">Add To Receipt</string>
    <string name="add_new_product">Add New Product</string>

    <string name="new_product_dialog_message">
        The barcode scanned has no existing records.
        Would you like to create a new one?
    </string>

    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>

    <string name="save_edit_content_desc">Save changes</string>
    <string name="cancel_edit_content_desc">Cancel changes</string>
    <string name="edit_content_desc">Edit product details</string>

    <string name="error_duplicate">%1$s must be unique.</string>
    <string name="error_field_required">Field is required.</string>
    <string name="error_maximum_exceeded">Value must not exceed %1$s.</string>
    <string name="error_minimum_not_reached">Value must be more than %1$s.</string>

    <string name="receipt">Receipt</string>
    <string name="inventory">Inventory</string>
    <string name="home">Home</string>
    <string name="sell">Sell</string>
    <string name="settings">Settings</string>
    <string name="new_product">New Product</string>

    <string name="no_image">No Image Found</string>
    <string name="delete">Delete</string>

    <string name="delete_confirmation_title">Delete Product</string>
    <string name="delete_confirmation_message">
        Are you sure you want to delete this product?
        You cannot undo this action.
    </string>

    <string name="no_product_image">Blank product image</string>
    <string name="non_existing_product">Product does not exist</string>
    <string name="no_product_number">No Product Number</string>
    <string name="inventory_search_hint">Search product name or number</string>
    <string name="inventory_search_content_desc">Search for product name or number</string>
    <string name="search_bar_clear_content_desc">Clear search text</string>

    <string name="sort_by">Sort By</string>
    <string name="sort_menu_content_description">Sorting type menu</string>

    <string name="sort_by_product_name">By Product Name</string>
    <string name="sort_by_product_number">By Product Number</string>
    <string name="sort_by_product_price">By Price</string>
    <string name="sort_by_product_stock">By Stock</string>

    <string name="new_product_fab_content_desc">Add new product</string>
    <string name="delete_product_content_desc">Delete %s</string>
    <string name="new_product_image_content_desc">Product image</string>

    <string name="add_product_image">Choose Image</string>
    <string name="remove_product_image">Remove Image</string>
    <string name="change_product_image">Change Image</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="photos_and_images">Photos and Images</string>

    <string name="permission_required_toast">%s permission required.</string>
    <string name="new_product_added">New product successfully added!</string>
    <string name="product_stock_updated">Product Stock Updated!</string>
    <string name="product_added_to_receipt">Product Added To Receipt!</string>
    <string name="product_details_updated">Product Details Updated!</string>
    <string name="product_deleted">Product Deleted!</string>

    <string name="top_app_bar_navigate_up_content_desc">Navigate back</string>
    <string name="flip_camera_content_description">Flip camera</string>
    <string name="scanner_no_camera_access">
        Barcode scanner unavailable. \n
        Enable camera access in app settings to use. \n
        App Settings > Permissions > Camera
    </string>

    <string name="receipt_total">Total: &lt;b>%s&lt;/b></string>
    <string name="product_sub_total">Sub Total: &lt;b>%s&lt;/b></string>
    <string name="product_amount">Amount: &lt;b>%s&lt;/b></string>
    <string name="remove_product_from_receipt_content_desc">Remove %s from receipt</string>

    <string name="clear_receipt_dialog_title">Clear Receipt</string>
    <string name="clear_receipt_dialog_message">This action cannot be undone.</string>

    <string name="confirm_sale_dialog_title">Confirm Sale</string>
    <string name="confirm_sale_dialog_message">
        Sale will be recorded if confirmed.
        This will clear also clear the receipt.
    </string>
    <string name="sale_confirmed">Sale successful!</string>

    <string name="low_on_stock_icon_content_description">Low on stock indicator</string>
    <string name="out_of_stock_icon_content_description">Out of stock indicator</string>
    <string name="home_low_on_stock">
        Low on&lt;br>
        Stock: &lt;b>%d&lt;/b>
    </string>
    <string name="home_out_of_stock">
        Out of&lt;br>
        Stock: &lt;b>%d&lt;/b>
    </string>

    <string name="sort_by_sold">By Number Sold</string>
    <string name="sort_by_profit">By Profit Earned</string>

    <string name="appearance">Appearance</string>
    <string name="enable_dark_mode_description">Enable dark theme</string>
</resources>