<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="uiState"
            type="com.mobile_programming.sari_sari_inventory_app.ui.receipt.ReceiptUiState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height_medium"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/receipt_top_app_bar_menu"
            app:navigationContentDescription="@string/top_app_bar_navigate_up_content_desc"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/receipt"
            app:titleCentered="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/receipt_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/top_app_toolbar"
                app:layout_constraintBottom_toTopOf="@id/bot_receipt_bar"
                tools:itemCount="11"
                tools:listitem="@layout/receipt_list_item" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bot_receipt_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="?attr/colorSurface"
                android:elevation="12dp">

                <TextView
                    android:id="@+id/receipt_total"
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/padding_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/confirm_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="?attr/colorOnSurface"/>

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/confirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:cornerRadius="0dp"
                    android:background="?attr/colorPrimary"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Floating Action Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addProductFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/new_product_fab_content_desc"
            android:layout_margin="@dimen/padding_medium"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
            app:srcCompat="@drawable/baseline_add_24"
            app:layout_constraintBottom_toTopOf="@id/bot_receipt_bar"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
