<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.mobile_programming.sari_sari_inventory_app.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/padding_medium"
            app:layout_constraintTop_toBottomOf="@id/top_app_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/appearance_subgroup_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appearance"
                    style="@style/TextAppearance.Material3.TitleSmall"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/dark_mode_theme_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_small"
                    app:layout_constraintTop_toBottomOf="@id/appearance_subgroup_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/enable_dark_mode_description"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:paddingVertical="@dimen/padding_medium"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/dark_mode_theme_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/dark_mode_theme_desc"
                    app:layout_constraintBottom_toBottomOf="@id/dark_mode_theme_desc"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>